# src/api/find-campaign.ts
@@ -2,12 +2,16 @@ import { collection, getDocs, query, where } from 'firebase/firestore';
 import { db } from '../firebase';
 import { Campaign } from '../types';
 
-export async function findCampaign(
+export async function findCampaignByCode(
   tenantId: string,
   code: string
 ): Promise<Campaign | null> {
   const querySnapshot = await getDocs(
-    query(collection(db, 'campaigns'), where('code', '==', code))
+    query(
+      collection(db, 'campaigns'),
+      where('tenantId', '==', tenantId),
+      where('code', '==', code)
+    )
   );
 
   const campaigns: Array<Campaign> = querySnapshot.docs.map((x) => {
@@ -22,4 +26,18 @@ export async function findCampaign(
   }
 
   return campaigns[0];
+}
+
+export async function findTenantIdByCampaignCode(
+  code: string
+): Promise<string | null> {
+  const querySnapshot = await getDocs(
+    query(collection(db, 'campaigns'), where('code', '==', code))
+  );
+
+  if (querySnapshot.empty) {
+    return null;
+  }
+
+  return querySnapshot.docs[0].data().tenantId;
 }
